--- a/chrome/global/tweaks.css
+++ b/chrome/global/tweaks.css
@@ -10,7 +10,7 @@
 /* force tabs to toolbar bg (useful for proton themes) (might experience some
 bugs with certain themes eg. dark text on dark background.) */
 @media (-moz-bool-pref: "uc.tweak.force-tab-colour") {
-  :root:-moz-lwtheme {
+  :root[lwtheme] {
     --tab-selected-bgcolor: var(--toolbar-bgcolor) !important;
     --tab-selected-textcolor: var(--toolbar-color) !important;
   }
@@ -27,7 +27,7 @@ bugs with certain themes eg. dark text on dark background.) */
 }
 
 @media (-moz-bool-pref: "uc.tweak.floating-tabs") {
-  :root:not(:-moz-lwtheme),
+  :root:not([lwtheme]),
   /* `--newtab-background-color-secondary used` to differentiate between a dark
    * private window and private window with the 'Dark' theme enabled.
    * May not be the most reliable method, but works for now up to FF 123. */
@@ -54,7 +54,7 @@ bugs with certain themes eg. dark text on dark background.) */
   }
 
   @media (-moz-gtk-csd-available) {
-    :root:not(:-moz-lwtheme) {
+    :root:not([lwtheme]) {
       --toolbar-bgcolor: color-mix(in srgb, -moz-dialog 80%, #fff) !important;
       --toolbar-field-background-color: Field !important;
       --lwt-tab-text: -moz-dialogtext !important;
